partial update of api to latest as per google api doc

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 REACT_APP_EXAMPLE=example
 REACT_APP_API_URL=example
 REACT_APP_SOMETHING_ELSE=1
+
+REACT_APP_API_CLIENTID=
+REACT_APP_API_SCOPE=
+REACT_APP_API_SPREADSHEETID=
+
+REACT_APP_API_CLIENTID=
+REACT_APP_API_SCOPES=
+REACT_APP_API_DISCOVERY_DOCS=
+REACT_APP_API_SPREADSHEETID=
